fix: fix  card images not fitting

--- a/blocks/elements-grid/__image/elements-grid__image.css
+++ b/blocks/elements-grid/__image/elements-grid__image.css
@@ -1,6 +1,8 @@
-.element-grid__image {
+.elements-grid__image {
     width: 282px;
     height: 282px;
     object-fit: cover;
     background-repeat: no-repeat;
+    border-radius: 10px 10px 0 0;
+
   }
